feat: Update and adjust base-frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "extends": "@quasar/app-vite/tsconfig-preset",
+  "extends": "./node_modules/@quasar/app-vite/types/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "types": ["lodash"],
+    "types": [
+      "lodash"
+    ],
     "typeRoots": [
       "./typings",
       "./node_modules/@types/"
