--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,14 @@
 {
+  "semi": true,
   "singleQuote": true,
-  "semi": true
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "vueIndentScriptAndStyle": false,
+  "htmlWhitespaceSensitivity": "ignore",
+  "singleAttributePerLine": true
 }
