--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "base-quasar",
+  "type": "module",
   "version": "0.0.1",
   "description": "A Quasar Project",
   "productName": "Quasar App",
   "author": "Fernando Piovezan <fernando.piovezan>",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
@@ -14,29 +15,33 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
-    "@quasar/extras": "^1.16.4",
-    "axios": "^1.2.1",
-    "dotenv": "^16.4.5",
-    "pinia": "^2.0.11",
-    "quasar": "^2.8.0",
-    "vue": "^3.4.18",
+    "@quasar/extras": "^1.17.0",
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "pinia": "^2.3.1",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.26",
     "vue-form-json-schema": "^3.0.0-alpha.0",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.12"
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.4.3",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "@eslint/js": "^9.39.2",
+    "@intlify/unplugin-vue-i18n": "^11.0.3",
+    "@quasar/app-vite": "^2.4.0",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^25.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^17.0.0",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
+    "vue-eslint-parser": "^10.2.0"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
